# YoloV8Infer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md
configs/: config.json  cpu_config.json  gpu_config.json
include/: JsonConfigManager.h  ObjectDetector.h
src/: JsonConfigManager.cpp  ObjectDetector.cpp  main.cpp
tests/: performance_test.cpp
